--- a/Modulos 3 a 6/06 Actividad Bootsrap/CV PABLO/index copy.html
+++ b/Modulos 3 a 6/06 Actividad Bootsrap/CV PABLO/index copy.html
@@ -193,55 +193,97 @@
                         <tbody>
                             <tr>
                                 <th scope="row"><i class="bi bi-person-workspace"></i></th>
-                                <td>2022 - <strong>NOW</strong></td>
+                                <td width="95">02/02 - 08/05</td>
                                 <td>
-                                    <h5><strong>Departamento de Diseño de Medios Interactivos</strong> | <span
-                                            style="font-size: 0.8em;">Docente</span></h5>
+                                    <h5><strong>Enredate Computers</strong> | <span style="font-size: 0.8em;">Pasante /
+                                            Técnico</span></h5>
                                 </td>
-                                <td>
-                                    Imparto las materias de:
-                                    <ul>
-                                        <li>Introducción al diseño de medios digitales</li>
-                                        <li>Arquitectura Web</li>
-                                        <li>Proyecto Integral Web</li>
-                                        <li>Producción de Video Digital</li>
-                                    </ul>
-                                </td>
+                                <td>Mantenimiento preventivo y correctivo en impresoras, redes, servidores,
+                                    equipos de sonido, soporte al cliente.</td>
                             </tr>
                             <tr>
                                 <th scope="row"><i class="bi bi-person-workspace"></i></th>
-                                <td>2011 - <strong>NOW</strong></td>
+                                <td>09/05 - 07/12</td>
                                 <td>
-                                    <h5><strong>Diseñador Freelance</strong></h5>
+                                    <h5><strong>Opentec</strong> | <span style="font-size: 0.8em;">Operador
+                                            Técnico</span></h5>
                                 </td>
-                                <td>
-                                    Especializado en:
-                                    <ul>
-                                        <li>Diseño de UX/UI</li>
-                                        <li>Diseño de sitios web</li>
-                                        <li>Diseño de redes sociales</li>
-                                        <li>Design thinking</li>
-                                    </ul>
-                                </td>
+                                <td>Encargado del correcto funcionamiento de la plataforma tecnológica. Logística y
+                                    operación, renta y venta de soluciones informáticas.</td>
                             </tr>
                             <tr>
                                 <th scope="row"><i class="bi bi-person-workspace"></i></th>
-                                <td>2014 - 2019</td>
+                                <td>08/12 - 07/18</td>
                                 <td>
-                                    <h5><strong>Lear Corporation</strong> | <span style="font-size: 0.8em;">Diseñador
-                                            Gráfico</span></h5>
+                                    <h5><strong>Universidad Tecmilenio</strong> | <span
+                                            style="font-size: 0.8em;">TI</span></h5>
+                                </td>
+                                <td>Encargado del correcto funcionamiento de la plataforma tecnológica. Logística y
+                                    operación, renta y venta de soluciones informáticas.</td>
+                            </tr>
+                            <tr>
+                                <th scope="row"><i class="bi bi-person-workspace"></i></th>
+                                <td>07/18 - 08/20</td>
+                                <td>
+                                    <h5><strong>Freelance</strong> | <span style="font-size: 0.8em;">Freelance</span>
+                                    </h5>
+                                </td>
+                                <td>Programador Full Stack.</td>
+                            </tr>
+                            <tr>
+                                <th scope="row"><i class="bi bi-person-workspace"></i></th>
+                                <td>08/17 - <strong>NOW</strong></td>
+                                <td>
+                                    <h5><strong>Universidad Tecmilenio</strong> | <span
+                                            style="font-size: 0.8em;">Profesor de
+                                            Cátedra</span></h5>
                                 </td>
                                 <td>
-                                    Responsabilidades incluyen:
+                                    Profesor de cátedra a nivel preparatoria y universidad con experiencia
+                                    impartiendo las
+                                    materias:
                                     <ul>
-                                        <li>Diseño gráfico y editorial de revista corporativa interna</li>
-                                        <li>Diseño de boletines y comunicados</li>
-                                        <li>Producción de videos corporativos</li>
-                                        <li>Diseño de presentaciones especiales para altos mandos</li>
-                                        <li>Diseño de impresiones de gran formato</li>
+                                        <li>Fundamentos de Programación</li>
+                                        <li>Fundamentos Matemáticos</li>
+                                        <li>Matemáticas I, II, III y IV</li>
+                                        <li>Tecnologías de Información para Ingeniería y para Negocios</li>
+                                        <li>Diseño Web</li>
+                                        <li>Fisica I y II</li>
                                     </ul>
                                 </td>
+                            <tr>
+                                <th scope="row"><i class="bi bi-person-workspace"></i></th>
+                                <td>02/20 - 08/20</td>
+                                <td>
+                                    <h5><strong>ConsultoresBPM</strong> | <span
+                                            style="font-size: 0.8em;">Consultor</span></h5>
+                                </td>
+                                <td>Desarrollo de soluciones administradas llave en mano.</td>
                             </tr>
+                            <tr>
+                                <th scope="row"><i class="bi bi-person-workspace"></i></th>
+                                <td>08/20 - 11/21</td>
+                                <td>
+                                    <h5><strong>Tooring</strong> | <span style="font-size: 0.8em;">CTO</span></h5>
+                                </td>
+                                <td>Director de Tecnología, responsable de área de desarrollo de software.</td>
+                            </tr>
+                            <tr>
+                                <th scope="row"><i class="bi bi-person-workspace"></i></th>
+                                <td>08/21 - <strong>NOW</strong></td>
+                                <td>
+                                    <h5><strong>Universidad Tecmilenio</strong> | <span style="font-size: 0.8em;">Diseño
+                                            académico</span></h5>
+                                </td>
+                                <td>
+                                    <p>Diseño, actualización y programación de cursos para la plataforma Canvas. Dentro
+                                        del área desempeño dos roles:</p>
+                                    <ul>
+                                        <li>Diseñador Instruccional</li>
+                                        <li>Programador web</li>
+                                    </ul>
+                                </td>
+                            <tr>
                         </tbody>
                     </table>
 
@@ -255,8 +297,9 @@
                                     </div>
                                     <div class="col-md-9">
                                         <div class="card-body">
-                                            <h5 class="card-title">SCRUM fundamentals</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Scrum Study</h6>
+                                            <h5 class="card-title">Six Sigma Yellow Belt</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">SigmaPro
+                                                Inc.</h6>
                                             <p class="card-text">Certificate ID: 012278</p>
                                         </div>
                                     </div>
@@ -272,8 +315,9 @@
                                     </div>
                                     <div class="col-md-9">
                                         <div class="card-body">
-                                            <h5 class="card-title">Fundamentos UI</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Tec Milenio</h6>
+                                            <h5 class="card-title">Yellow Belt</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">SigmaPro
+                                                Inc.</h6>
                                             <p class="card-text">Certificate ID: 012278</p>
                                         </div>
                                     </div>
@@ -291,7 +335,43 @@
                                     </div>
                                     <div class="col-md-9">
                                         <div class="card-body">
-                                            <h5 class="card-title">Design Thinking</h5>
+                                            <h5 class="card-title">Liderazgo Estratégico</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">Universidad Tecmilenio</h6>
+                                            <!-- <p class="card-text">Certificate ID: 012278</p> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="card mb-3">
+                                <div class="row g-0">
+                                    <div class="col-md-3 align-self-center">
+                                        <p align="center"><i class="bi bi-award-fill" style="font-size: 2.5em;"></i></p>
+                                        <p align="center"><small class="text-muted">2017</small></p>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Microsoft Office 2013</h5>
+                                            <h6 class="card-subtitle mb-2 text-muted">Certiport</h6>
+                                            <!-- <p class="card-text">Certificate ID: 012278</p> -->
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="card mb-3">
+                                <div class="row g-0">
+                                    <div class="col-md-3 align-self-center">
+                                        <p align="center"><i class="bi bi-award-fill" style="font-size: 2.5em;"></i></p>
+                                        <p align="center"><small class="text-muted">2015</small></p>
+                                    </div>
+                                    <div class="col-md-9">
+                                        <div class="card-body">
+                                            <h5 class="card-title">e-LEADERSHIP</h5>
                                             <h6 class="card-subtitle mb-2 text-muted">Consultoría, Diagnostico y
                                                 Desarrollo de Talento</h6>
                                             <!-- <p class="card-text">Certificate ID: 012278</p> -->
@@ -309,81 +389,9 @@
                                     </div>
                                     <div class="col-md-9">
                                         <div class="card-body">
-                                            <h5 class="card-title">Solid Works</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Dassault Systems</h6>
-                                            <!-- <p class="card-text">Certificate ID: 012278</p> -->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="card mb-3">
-                                <div class="row g-0">
-                                    <div class="col-md-3 align-self-center">
-                                        <p align="center"><i class="bi bi-award-fill" style="font-size: 2.5em;"></i></p>
-                                        <p align="center"><small class="text-muted">2015</small></p>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Adobe Suite</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Adobe</h6>
-                                            <!-- <p class="card-text">Certificate ID: 012278</p> -->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="card mb-3">
-                                <div class="row g-0">
-                                    <div class="col-md-3 align-self-center">
-                                        <p align="center"><i class="bi bi-award-fill" style="font-size: 2.5em;"></i></p>
-                                        <p align="center"><small class="text-muted">2017</small></p>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Diseño centrado en el Usuario</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Tec Milenio</h6>
-                                            <!-- <p class="card-text">Certificate ID: 012278</p> -->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="card mb-3">
-                                <div class="row g-0">
-                                    <div class="col-md-3 align-self-center">
-                                        <p align="center"><i class="bi bi-award-fill" style="font-size: 2.5em;"></i></p>
-                                        <p align="center"><small class="text-muted">2015</small></p>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Metodologías Ágiles</h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Tec Milenio</h6>
-                                            <!-- <p class="card-text">Certificate ID: 012278</p> -->
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="card mb-3">
-                                <div class="row g-0">
-                                    <div class="col-md-3 align-self-center">
-                                        <p align="center"><i class="bi bi-award-fill" style="font-size: 2.5em;"></i></p>
-                                        <p align="center"><small class="text-muted">2017</small></p>
-                                    </div>
-                                    <div class="col-md-9">
-                                        <div class="card-body">
                                             <h5 class="card-title">Productividad basada en herramientas tecnológicas
                                             </h5>
-                                            <h6 class="card-subtitle mb-2 text-muted">Tec Milenio</h6>
+                                            <h6 class="card-subtitle mb-2 text-muted">Universidad Tecmilenio</h6>
                                             <!-- <p class="card-text">Certificate ID: 012278</p> -->
                                         </div>
                                     </div>
