--- a/Modulos 3 a 6/06 Actividad Bootsrap/responsive.html
+++ b/Modulos 3 a 6/06 Actividad Bootsrap/responsive.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <div class="row gx-1">
             <div class="col card">
                 <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" class="card-img-top"
@@ -65,8 +65,49 @@
             </div>
 
         </div>
-    </div>
+    </div> -->
+    <div class="container">
+        <div class="row green m-0 height2">
 
+        </div>
+        <div class="row my-1 mx-0">
+            <div class="col-2 m-0 red">Column Red</div>
+            <div class="col mx-1 border p-1">
+                <div class="row m-2 pink heigh2">Pink</div>
+                <div class="row my-1 mx-0 px-2">
+                    <div class="col-sm-12 col-md-6  my-1 peach ">Peach</div>
+                    <div class="col-sm-12 col-md-6  my-1  peach ">Peach</div>
+                </div>
+                <div class="row m-0 h">
+                    <div class="col m-0">
+                        <div class="row my-1 height4">
+                            <div class="col-md mx-1 blue">blue</div>
+                            <div class="col-md mx-1 blue">blue</div>
+                            <div class="col-md-md-3 mx-1 blue">blue</div>
+                            <div class="col-md blue mx-1">blue</div>
+                            <div class="col-md blue mx-1">blue</div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row m-0">
+                    <div class="col m-0">
+                        <div class="row my-1 height4">
+                            <div class="col-md-12 mx-1 blue">blue</div>
+                            <div class="col-md mx-1 blue">blue</div>
+                            <div class="col-md col-md-3 mx-1 blue">blue</div>
+                            <div class="col-md blue mx-1">blue</div>
+                            <div class="col-md blue mx-1">blue</div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="row green m-0 height2">
+
+        </div>
+    </div>
 </body>
 
 </html>
