--- a/Modulo 4/Sesión 6- actividad guiada/Actividad guiada - Parte 2/index.html
+++ b/Modulo 4/Sesión 6- actividad guiada/Actividad guiada - Parte 2/index.html
@@ -21,7 +21,9 @@
             <div class="col-md-4" id="izquierda">
                 <h4 align="center">Pablo D. Gutiérrez</h4>
                 <h6 align="center">Diseñador</h5>
-                    <p align="center"><img src="img/pablo-avatar.png" width="90%" alt=""></p>
+                    <p align="center">
+                        <img src="img/pablo-avatar.png" width="90%" alt="">
+                    </p>
                     <div class="container">
                         <h5>Sobre mi:</h5>
                         <p>Hola, actualmente me encuentro dando clases en el Departamento de Diseño de Medios
